--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL=mongodb+srv://rishubamola01:8rExmp6y3BQEA0q9@cluster0.r8d8uop.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 ACCESS_TOKEN_SECRET=bamoli
+MONGO_URL=mongodb+srv://riteshbamola:UiWiiwDEYG1ujsTz@cluster0.r8d8uop.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
